added Astro Calculator

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="/app/js/main.controller.js"></script>
     <script src="/app/js/main.state1.conroller.js"></script>
     <script src="/app/js/main.state1.factory.js"></script>
+    <script src="/app/js/main.state2.controller.js"></script>
     <!-- endinject -->
 </body>
 
