added comments to code

--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
     <div ui-view></div>
     <!-- inject:js -->
     <script src="/app/js/app.js"></script>
-    <script src="/app/js/main.controller.js"></script>
-    <script src="/app/js/main.state1.conroller.js"></script>
+    <script src="/app/js/main.state1.controller.js"></script>
     <script src="/app/js/main.state1.factory.js"></script>
     <script src="/app/js/main.state2.controller.js"></script>
+    <script src="/app/js/main.state3.controller.js"></script>
+    <script src="/app/js/main.state4.controller.js"></script>
+    <script src="/app/js/main.state5.controller.js"></script>
+    <script src="/app/js/main.state6.controller.js"></script>
     <!-- endinject -->
 </body>
 
