added Mortgage calc, weather app, change calc, and part of Memory Game

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/toastr/toastr.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <div class="page-header">
         <h1>VerySimple<small>Applications</small></h1>
@@ -36,7 +37,9 @@
     <script src="/app/js/main.state3.controller.js"></script>
     <script src="/app/js/main.state4.controller.js"></script>
     <script src="/app/js/main.state5.controller.js"></script>
+    <script src="/app/js/main.state5.factory.js"></script>
     <script src="/app/js/main.state6.controller.js"></script>
+    <script src="/app/js/main.state6.factory.js"></script>
     <!-- endinject -->
 </body>
 
