ToDo List, Astro Calc, Mortgage Calc, Change Calc, Memory Game, Weather App, Movie Finder all functioning, next starting unit testing

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <script src="/app/js/main.state5.factory.js"></script>
     <script src="/app/js/main.state6.controller.js"></script>
     <script src="/app/js/main.state6.factory.js"></script>
+    <script src="/app/js/main.state7.controller.js"></script>
+    <script src="/app/js/main.state7.detail.controller.js"></script>
+    <script src="/app/js/main.state7.factory.js"></script>
     <!-- endinject -->
 </body>
 
