--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>VerySimple</title>
+    <title>Christian McFarland</title>
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
+    <link rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.css' />
+    <link rel='stylesheet' href='bower_components/angular-toastr/dist/angular-toastr.css' />
+    <link rel='stylesheet' href='bower_components/toastr/toastr.css' />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/app/style/style.css">
     <!-- endinject -->
+    <link href='https://fonts.googleapis.com/css?family=Righteous|Patua+One' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -19,30 +21,34 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="bower_components/toastr/toastr.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/toastr/toastr.js"></script>
     <!-- endbower -->
-    <div class="page-header">
-        <h1>VerySimple<small>Applications</small></h1>
-        <span id="backgroundColorButtons" class="btn-group">
-			  	<button type="button" class="btn btn-default"></button>
-			  </span>
-    </div>
     <div ui-view></div>
     <!-- inject:js -->
     <script src="/app/js/app.js"></script>
+    <script src="/app/js/auth.interceptor.js"></script>
+    <script src="/app/js/auth.service.js"></script>
+    <script src="/app/js/login.controller.js"></script>
+    <script src="/app/js/main.controller.js"></script>
     <script src="/app/js/main.state1.controller.js"></script>
     <script src="/app/js/main.state1.factory.js"></script>
     <script src="/app/js/main.state2.controller.js"></script>
     <script src="/app/js/main.state3.controller.js"></script>
     <script src="/app/js/main.state4.controller.js"></script>
     <script src="/app/js/main.state5.controller.js"></script>
-    <script src="/app/js/main.state5.factory.js"></script>
     <script src="/app/js/main.state6.controller.js"></script>
     <script src="/app/js/main.state6.factory.js"></script>
     <script src="/app/js/main.state7.controller.js"></script>
     <script src="/app/js/main.state7.detail.controller.js"></script>
     <script src="/app/js/main.state7.factory.js"></script>
+    <script src="/app/js/register.controller.js"></script>
+    <script src="/app/js/state8.controller.js"></script>
+    <script src="/app/js/state8.factory.js"></script>
     <!-- endinject -->
 </body>
 
