--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
     <script src="/app/js/auth.service.js"></script>
     <script src="/app/js/login.controller.js"></script>
     <script src="/app/js/main.controller.js"></script>
-    <script src="/app/js/main.state1.controller.js"></script>
-    <script src="/app/js/main.state1.factory.js"></script>
     <script src="/app/js/main.state2.controller.js"></script>
     <script src="/app/js/main.state3.controller.js"></script>
     <script src="/app/js/main.state4.controller.js"></script>
@@ -49,6 +47,7 @@
     <script src="/app/js/register.controller.js"></script>
     <script src="/app/js/state8.controller.js"></script>
     <script src="/app/js/state8.factory.js"></script>
+    <script src="/app/js/state8.todo.factory.js"></script>
     <!-- endinject -->
 </body>
 
