commented out the Chirper application page to prevent CORS error when pushing live

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script src="/app/js/register.controller.js"></script>
     <script src="/app/js/state8.controller.js"></script>
     <script src="/app/js/state8.factory.js"></script>
+    <script src="/app/js/state8.todo.controller.js"></script>
     <script src="/app/js/state8.todo.factory.js"></script>
     <!-- endinject -->
 </body>
