syncing master with live gh-pages

--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
     <!-- endbower -->
     <div ui-view></div>
     <!-- inject:js -->
-    <script src="/app/js/app.js"></script>
-    <script src="/app/js/auth.interceptor.js"></script>
-    <script src="/app/js/auth.service.js"></script>
-    <script src="/app/js/login.controller.js"></script>
-    <script src="/app/js/main.controller.js"></script>
-    <script src="/app/js/main.state2.controller.js"></script>
-    <script src="/app/js/main.state3.controller.js"></script>
-    <script src="/app/js/main.state4.controller.js"></script>
-    <script src="/app/js/main.state5.controller.js"></script>
-    <script src="/app/js/main.state6.controller.js"></script>
-    <script src="/app/js/main.state6.factory.js"></script>
-    <script src="/app/js/main.state7.controller.js"></script>
-    <script src="/app/js/main.state7.detail.controller.js"></script>
-    <script src="/app/js/main.state7.factory.js"></script>
-    <script src="/app/js/register.controller.js"></script>
-    <script src="/app/js/state8.controller.js"></script>
-    <script src="/app/js/state8.factory.js"></script>
-    <script src="/app/js/state8.todo.controller.js"></script>
-    <script src="/app/js/state8.todo.factory.js"></script>
+    <script src="app/js/app.js"></script>
+    <script src="app/js/auth.interceptor.js"></script>
+    <script src="app/js/auth.service.js"></script>
+    <script src="app/js/login.controller.js"></script>
+    <script src="app/js/main.controller.js"></script>
+    <script src="app/js/main.state2.controller.js"></script>
+    <script src="app/js/main.state3.controller.js"></script>
+    <script src="app/js/main.state4.controller.js"></script>
+    <script src="app/js/main.state5.controller.js"></script>
+    <script src="app/js/main.state6.controller.js"></script>
+    <script src="app/js/main.state6.factory.js"></script>
+    <script src="app/js/main.state7.controller.js"></script>
+    <script src="app/js/main.state7.detail.controller.js"></script>
+    <script src="app/js/main.state7.factory.js"></script>
+    <script src="app/js/register.controller.js"></script>
+    <script src="app/js/state8.controller.js"></script>
+    <script src="app/js/state8.factory.js"></script>
+    <script src="app/js/state8.todo.controller.js"></script>
+    <script src="app/js/state8.todo.factory.js"></script>
     <!-- endinject -->
 </body>
 
