--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel='stylesheet' href='bower_components/toastr/toastr.css' />
     <!-- endbower -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="/app/style/style.css">
+    <link rel="stylesheet" href="app/style/style.css">
     <!-- endinject -->
     <link href='https://fonts.googleapis.com/css?family=Righteous|Patua+One' rel='stylesheet' type='text/css'>
 </head>
