refactored to 'folder by feature' John Papa style

--- a/app/Main/main.html
+++ b/app/Main/main.html
@@ -3,7 +3,7 @@
         <h1>Christian McFarland</h1>
         <h3>Origin Code Academy</h3>
         <h4>San Diego, CA</h4>
-        <p>A few simple applications utilizing HTML/CSS/Javascript/AngularJS</p>
+        <p>Click an icon below!</p>
     </div>
     <div class="col-xs-12" id="list">
 <!--         <div ui-sref-active="active" ui-sref="main.state1" id="listImage">
