--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel='stylesheet' href='bower_components/toastr/toastr.css' />
     <!-- endbower -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="/app/style/style.css">
+    <link rel="stylesheet" href="app/style/style.css">
     <!-- endinject -->
     <link href='https://fonts.googleapis.com/css?family=Righteous|Patua+One' rel='stylesheet' type='text/css'>
 </head>
@@ -30,25 +30,25 @@
     <!-- endbower -->
     <div ui-view></div>
     <!-- inject:js -->
-    <script src="/app/app.js"></script>
-    <script src="/app/Auth/auth.interceptor.js"></script>
-    <script src="/app/Auth/auth.service.js"></script>
-    <script src="/app/8Chirper/login.controller.js"></script>
-    <script src="/app/Main/main.controller.js"></script>
-    <script src="/app/2AstroCalc/main.state2.controller.js"></script>
-    <script src="/app/3MortgageCalc/main.state3.controller.js"></script>
-    <script src="/app/4ChangeCalc/main.state4.controller.js"></script>
-    <script src="/app/5MemoryGame/main.state5.controller.js"></script>
-    <script src="/app/6WeatherApp/main.state6.controller.js"></script>
-    <script src="/app/6WeatherApp/main.state6.factory.js"></script>
-    <script src="/app/7MovieFinder/main.state7.controller.js"></script>
-    <script src="/app/7MovieFinder/main.state7.detail.controller.js"></script>
-    <script src="/app/7MovieFinder/main.state7.factory.js"></script>
-    <script src="/app/8Chirper/register.controller.js"></script>
-    <script src="/app/8Chirper/state8.controller.js"></script>
-    <script src="/app/8Chirper/state8.factory.js"></script>
-    <script src="/app/8Todo/state8.todo.controller.js"></script>
-    <script src="/app/8Todo/state8.todo.factory.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/Auth/auth.interceptor.js"></script>
+    <script src="app/Auth/auth.service.js"></script>
+    <script src="app/8Chirper/login.controller.js"></script>
+    <script src="app/Main/main.controller.js"></script>
+    <script src="app/2AstroCalc/main.state2.controller.js"></script>
+    <script src="app/3MortgageCalc/main.state3.controller.js"></script>
+    <script src="app/4ChangeCalc/main.state4.controller.js"></script>
+    <script src="app/5MemoryGame/main.state5.controller.js"></script>
+    <script src="app/6WeatherApp/main.state6.controller.js"></script>
+    <script src="app/6WeatherApp/main.state6.factory.js"></script>
+    <script src="app/7MovieFinder/main.state7.controller.js"></script>
+    <script src="app/7MovieFinder/main.state7.detail.controller.js"></script>
+    <script src="app/7MovieFinder/main.state7.factory.js"></script>
+    <script src="app/8Chirper/register.controller.js"></script>
+    <script src="app/8Chirper/state8.controller.js"></script>
+    <script src="app/8Chirper/state8.factory.js"></script>
+    <script src="app/8Todo/state8.todo.controller.js"></script>
+    <script src="app/8Todo/state8.todo.factory.js"></script>
     <!-- endinject -->
 </body>
 
