redesign of the interface, changed 'main' to 'home', education and ecxperience modals, links to projects added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel='stylesheet' href='bower_components/toastr/toastr.css' />
     <!-- endbower -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="app/style/style.css">
+    <link rel="stylesheet" href="/app/style/style.css">
     <!-- endinject -->
     <link href='https://fonts.googleapis.com/css?family=Righteous|Patua+One' rel='stylesheet' type='text/css'>
 </head>
@@ -34,16 +34,16 @@
     <script src="app/Auth/auth.interceptor.js"></script>
     <script src="app/Auth/auth.service.js"></script>
     <script src="app/8Chirper/login.controller.js"></script>
-    <script src="app/Main/main.controller.js"></script>
-    <script src="app/2AstroCalc/main.state2.controller.js"></script>
-    <script src="app/3MortgageCalc/main.state3.controller.js"></script>
-    <script src="app/4ChangeCalc/main.state4.controller.js"></script>
-    <script src="app/5MemoryGame/main.state5.controller.js"></script>
-    <script src="app/6WeatherApp/main.state6.controller.js"></script>
-    <script src="app/6WeatherApp/main.state6.factory.js"></script>
-    <script src="app/7MovieFinder/main.state7.controller.js"></script>
-    <script src="app/7MovieFinder/main.state7.detail.controller.js"></script>
-    <script src="app/7MovieFinder/main.state7.factory.js"></script>
+    <script src="app/Home/home.controller.js"></script>
+    <script src="app/2AstroCalc/home.state2.controller.js"></script>
+    <script src="app/3MortgageCalc/home.state3.controller.js"></script>
+    <script src="app/4ChangeCalc/home.state4.controller.js"></script>
+    <script src="app/5MemoryGame/home.state5.controller.js"></script>
+    <script src="app/6WeatherApp/home.state6.controller.js"></script>
+    <script src="app/6WeatherApp/home.state6.factory.js"></script>
+    <script src="app/7MovieFinder/home.state7.controller.js"></script>
+    <script src="app/7MovieFinder/home.state7.detail.controller.js"></script>
+    <script src="app/7MovieFinder/home.state7.factory.js"></script>
     <script src="app/8Chirper/register.controller.js"></script>
     <script src="app/8Chirper/state8.controller.js"></script>
     <script src="app/8Chirper/state8.factory.js"></script>
