--- a/app/Home/home.html
+++ b/app/Home/home.html
@@ -1,46 +1,32 @@
 <div class="row">
-    <div id="nameColumn" class="col col-xs-12 col-sm-12 col-md-12 col-lg-9 col-xl-9 text-center ">
+    <div id="nameColumn" class="col col-xs-12 text-center ">
         <h1>CHRISTIAN MCFARLAND</h1>
         <h2>Software Developer</h2>
     </div>
 </div>
 <div id="titleRow" class="row">
-    <div class="col col-xs-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 text-center">
+    <div class="col col-xs-12 col-md-4 text-center">
         <h3>EDUCATION</h3>
-        <ul id="educationList">
-            <li ng-repeat="education in vm.educations">
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#educationModal">
-                    {{education}}
-                </button>
-            </li>
-        </ul>
+        <button ng-repeat="education in vm.educations" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#educationModal">
+            {{education}}
+        </button>
     </div>
-    <div class="col col-xs-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 text-center">
+    <div class="col col-xs-12 col-md-4 text-center">
         <h3>EXPERIENCE</h3>
-        <ul id="experienceList">
-            <li ng-repeat="experience in vm.experiences">
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#experienceModal">
-                    {{experience}}
-                </button>
-            </li>
-        </ul>
+        <button ng-repeat="experience in vm.experiences" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#experienceModal">
+            {{experience}}
+        </button>
     </div>
-    <div id="examplesColumn" class="col col-xs-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 text-center">
+    <div id="examplesColumn" class="col col-xs-12 col-md-4 text-center">
         <h3>EXAMPLES</h3>
-        <ul id="examplesList">
-            <li ng-repeat="example in vm.examples">
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">
-                    {{example}}
-                </button>
-            </li>
-            <li>
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#calculatorModal">
-                    CALCULATORS
-                </button>
-            </li>
-        </ul>
+        <button ng-repeat="example in vm.examples" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">
+            {{example}}
+        </button>
+        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#calculatorModal">
+            CALCULATORS
+        </button>
     </div>
-    <div id="opinionColumn" class="col col-xs-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 text-center">
+    <div id="opinionColumn" class="col col-xs-12 col-md-4 col-md-offset-4 text-center">
         <h3>BLOG</h3>
         <h3>YOUTUBE</h3>
         <h3>GITHUB</h3>
