calculators display nicely

--- a/app/4ChangeCalc/home.state4.html
+++ b/app/4ChangeCalc/home.state4.html
@@ -1,5 +1,5 @@
 <!--Container holding all elements of this state-->
-<div id="StateContainer" class="col-xs-6 col-xs-offset-3">
+<div id="StateContainer" class="col-xs-12">
     <!--Panel holding the input elements and results-->
     <h2>Change Calculator</h2>
     <div id="appMain">
