--- a/app/2AstroCalc/home.state2.html
+++ b/app/2AstroCalc/home.state2.html
@@ -1,5 +1,5 @@
 <!--Container holding all elements of this state-->
-<div id="StateContainer" class="col-xs-6 col-xs-offset-3 container-fluid">
+<div id="StateContainer" class="col-xs-12 container-fluid">
     <!--Panel holding the input form and results -->
     <h2>Astro Weight Calculator</h2>
     <div id="appMain">
