--- a/app/3MortgageCalc/home.state3.html
+++ b/app/3MortgageCalc/home.state3.html
@@ -1,5 +1,5 @@
 <!--Container holding all elements of this state-->
-<div id="StateContainer" class="col-xs-6 col-xs-offset-3 container-fluid">
+<div id="StateContainer" class="col-xs-12 container-fluid">
     <h2>Mortgage Calculator</h2>
     <div id="appMain">
         <h4>Calculate your monthly payment</h4>
