added slider to change colors

--- a/app/Home/home.html
+++ b/app/Home/home.html
@@ -46,6 +46,9 @@
         <h3>STACK OVERFLOW</h3>
     </div>
 </div>
+<div id="sliderContainer" class="col col-xs-4 col-xs-offset-4 text-center">
+    <input ng-mouseup="vm.colorChanger()" id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14" />
+</div>
 <!-- 
 
 MODALS
