--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.css' />
     <link rel='stylesheet' href='bower_components/angular-toastr/dist/angular-toastr.css' />
     <link rel='stylesheet' href='bower_components/toastr/toastr.css' />
+    <link rel='stylesheet' href='bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.css' />
     <!-- endbower -->
-    <!-- inject:css -->
     <link rel="stylesheet" href="app/style/style.css">
-    <!-- endinject -->
+    <link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.css">
     <link href='https://fonts.googleapis.com/css?family=Righteous|Patua+One' rel='stylesheet' type='text/css'>
 </head>
 
@@ -27,6 +27,7 @@
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/toastr/toastr.js"></script>
+    <script src="bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.js"></script>
     <!-- endbower -->
     <div ui-view></div>
     <!-- inject:js -->
