--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <title>Christian McFarland</title>
     <!-- bower:css -->
-    <link rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.css' />
-    <link rel='stylesheet' href='bower_components/angular-toastr/dist/angular-toastr.css' />
-    <link rel='stylesheet' href='bower_components/toastr/toastr.css' />
-    <link rel='stylesheet' href='bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.css' />
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
+    <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
+    <link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="app/style/style.css">
     <link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.css">
-    <link href='https://fonts.googleapis.com/css?family=Righteous|Patua+One' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
