--- a/app/Home/home.html
+++ b/app/Home/home.html
@@ -1,90 +1,20 @@
+<h1>Christian McFarland, Portfolio</h1>
 <div class="row">
-    <div id="nameColumn" class="col col-xs-12 text-center ">
-        <h1>CHRISTIAN MCFARLAND</h1>
-        <h2>Software Developer</h2>
-    </div>
+    <div class="col-xs-12 col-md-2">
+        <h2 ui-sref="home.state6" ng-click="vm.calcShowing=false">Weather</h2></div>
+    <div class="col col-xs-12 col-md-2">
+        <h2 ui-sref="home.state7" ng-click="vm.calcShowing=false">Movies</h2></div>
+    <div class="col col-xs-12 col-md-2">
+        <h2 ui-sref="home" ng-click="vm.calcShowing=true">Calculators</h2></div>
+    <div class="col col-xs-12 col-md-2">
+        <h2 ui-sref="home.state5" ng-click="vm.calcShowing=false">Memory</h2></div>
 </div>
-<div id="titleRow" class="row">
-    <div id="educationColumn" class="col col-xs-12 col-md-4 text-center">
-        <h3>EDUCATION</h3>
-        <button ng-repeat="education in vm.educations" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#educationModal">
-            {{education}}
-        </button>
-    </div>
-    <div id="experiemceColumn" class="col col-xs-12 col-md-4 text-center">
-        <h3>EXPERIENCE</h3>
-        <button ng-repeat="experience in vm.experiences" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#experienceModal">
-            {{experience}}
-        </button>
-    </div>
-    <div id="examplesColumn" class="col col-xs-12 col-md-4 text-center">
-        <h3>EXAMPLES</h3>
-        <button ng-repeat="example in vm.examples" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">
-            {{example}}
-        </button>
-        <button type="button" class="btn btn-primary btn-lg" ui-sref="home" ng-click="vm.trueistrue = !vm.trueistrue">
-            CALCULATORS
-        </button>
-        <div ng-if="vm.trueistrue" class="row" id="calcList">
-            <a class="col col-xs-4 text-center" ui-sref-active="active" ui-sref="home.state2" id="listImage">
-                <p><span class="glyphicon glyphicon-globe"></span></p>
-            </a>
-            <a class="col col-xs-4 text-center" ui-sref-active="active" ui-sref="home.state3" id="listImage">
-                <p><span class="glyphicon glyphicon-pencil"></span></p>
-            </a>
-            <a class="col col-xs-4 text-center" ui-sref-active="active" ui-sref="home.state4" id="listImage">
-                <p><span class="glyphicon glyphicon-usd"></span></p>
-            </a>
-            </a>
-        </div>
-        <div ui-view></div>
-    </div>
-    <div id="opinionColumn" class="col col-xs-12 col-md-4 col-md-offset-4 text-center">
-        <h3>BLOG</h3>
-        <h3>YOUTUBE</h3>
-        <h3>GITHUB</h3>
-        <h3>STACK OVERFLOW</h3>
-    </div>
+<div class="row" ng-show="vm.calcShowing">
+    <div class="col col-xs-4">
+        <h3 ui-sref="home.state2">Astro Weight Calculator</h3></div>
+    <div class="col col-xs-4">
+        <h3 ui-sref="home.state3">Mortgage Calculator</h3></div>
+    <div class="col col-xs-4">
+        <h3 ui-sref="home.state4">Change Calculuator</h3></div>
 </div>
-<div id="sliderContainer" class="col col-xs-4 col-xs-offset-4 text-center">
-    <input ng-mouseup="vm.colorChanger()" id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14" />
-</div>
-<!-- 
-
-MODALS
-
- -->
-<div class="modal fade" id="educationModal" tabindex="-1" role="dialog" aria-labelledby="educationLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="educationLabel">Modal title</h4>
-            </div>
-            <div class="modal-body">
-                <a onclick="window.open('http://www.origincodeacademy.com', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">www.origincodeacademy.com</a> </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="modal fade" id="experienceModal" tabindex="-1" role="dialog" aria-labelledby="experienceModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="experienceModalLabel">Education</h4>
-            </div>
-            <div class="modal-body">
-                <a onclick="window.open('http://www.origincodeacademy.com', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">www.origincodeacademy.com</a>
-            </div>
-            <div ui-view autoscroll></div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- <li><a onclick="window.open('https://www.palmbeachstate.edu/programs/fire/firefighter-academy.aspx', '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">Palm Beach State College Fire Academy</a></li>
- -->
+<div ui-view></div>
