--- a/app/5MemoryGame/home.state5.html
+++ b/app/5MemoryGame/home.state5.html
@@ -1,5 +1,5 @@
 <!--Container holding all elements of this state-->
-<div id="StateContainer" class="col-xs-12 col-md-8 col-md-offset-2 container">
+<div id="StateContainer" class="col-xs-12 col-md-8 col-md-offset-2 container text-center">
     <h2>Memory Game</h2>
     <h4>Pick Two</h4>
     <div id="appMain">
