--- a/app/6WeatherApp/home.state6.html
+++ b/app/6WeatherApp/home.state6.html
@@ -4,7 +4,7 @@
     <div id="appMain">
         <div class="container-fluid">
             <p>Always know if you need an umbrella</p>
-            <div class="btn-group" role="group">
+            <div class="row">
                 <button type="button" class="btn btn-primary" ng-click="vm.newWeather('sandiego')">San Diego</button>
                 <button type="button" class="btn btn-primary" ng-click="vm.newWeather('newyork')">New York</button>
                 <button type="button" class="btn btn-primary" ng-click="vm.newWeather('washingtondc')">Washington D.C.</button>
