--- a/app/Home/home.html
+++ b/app/Home/home.html
@@ -1,6 +1,6 @@
-<h1>Christian McFarland, Portfolio</h1>
-<div class="row">
-    <div class="col-xs-12 col-md-2">
+<h1 class="text-center">Christian McFarland, Portfolio</h1>
+<div id="menuBar" class="row text-center">
+    <div class="col-xs-12 col-md-2 col-md-offset-2">
         <h2 ui-sref="home.state6" ng-click="vm.calcShowing=false">Weather</h2></div>
     <div class="col col-xs-12 col-md-2">
         <h2 ui-sref="home.state7" ng-click="vm.calcShowing=false">Movies</h2></div>
