--- a/app/7MovieFinder/home.state7.list.html
+++ b/app/7MovieFinder/home.state7.list.html
@@ -1,8 +1,8 @@
-<div id="StateContainer" class="col-md-8 col-md-offset-2 container-fluid">
-    <div class="col-md-4">
+<div id="StateContainer" class="col-xs-12 container-fluid">
+    <div class="col-xs-12">
         <img src="{{vm.movies.Poster}}">
     </div>
-    <div class="col-md-8">
+    <div class="col-xs-12 text-left">
         <h1 id="movieTitle"><b>{{vm.movies.Title}}</b></h1>
         <p><b>Year: </b>{{vm.movies.Year}}</p>
         <p><b>Rated: </b>{{vm.movies.Rated}}</p>
@@ -23,6 +23,6 @@
         <p><b>Year: </b>{{vm.movies.Year}}</p>
         <p><b>IMDB Rating: </b>{{vm.movies.imdbRating}}</p>
         <p><b>IMDB Votes: </b>{{vm.movies.imdbVotes}}</p>
-        <a type="button" class="btn btn-primary btn-lg" ui-sref="main.state7">New Search</a>
+        <a type="button" class="btn btn-primary btn-lg" ui-sref="home.state7">New Search</a>
     </div>
 </div>
