--- a/app/7MovieFinder/home.state7.html
+++ b/app/7MovieFinder/home.state7.html
@@ -6,7 +6,7 @@
         <div class="container-fluid">
             <div class="col-md-12" id="inputSize">
                 <div class="input-group">
-                    <input type="text" class="form-control" ng-model="vm.movie" placeholder="Search for any movie or part of a movie title">
+                    <input type="text" class="form-control" ng-model="vm.movie" placeholder="Search">
                     <span class="input-group-btn">
                 <button class="btn btn-secondary" type="button" ng-click="vm.newMovies()">Go!</button>
               </span>
